--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ nav li {
 
 nav a {
     font-family:'Roboto Condensed';
-    text-decoration: none;
     color: white;
 }
 
@@ -67,4 +66,78 @@ header {
     font-weight: 300;
     font-size: 15px;
     width: 50%;
+}
+
+.skillCard{
+    width: 500px;
+    height: 200px;
+    background-color: #f5f5f5;
+    margin: 50px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    box-shadow: 5px 5px 15px 2px rgba(0,0,0,0.88);
+}
+
+
+.cardLine{
+    display: flex;
+    justify-content: space-around;
+}
+
+#skills{
+    margin-top: 50px;
+    position: relative;
+}
+
+.skillsTitle{
+    font-family:'Roboto Condensed';
+    text-align: center;
+    font-size: 80px;
+    font-weight: 300;
+}
+
+.skillsTitleBack{
+    font-family:'Roboto Condensed';
+    text-align: center;
+    opacity: 0.05;
+    color: #5b5963;
+    font-size: 150px;
+    position: absolute;
+    top: -50px;
+    left: 10%;
+    right: 10%;
+}
+
+.size{
+    width: 450px;
+    height: 450px;
+}
+
+.spanSkills{
+    font-family:'Roboto Condensed';
+    margin-top: 20px;
+    color: black;
+}
+
+.skillCard :hover{
+    cursor: pointer;
+}
+
+.divGit i {
+    margin: 10px;
+}
+
+a{
+    text-decoration: none;
+}
+
+#projets{
+    width: 100%;
+    height: 1000px;
+    background: url(./images/1920x1080-95116-abstract-dark-black-minimalism-minimalist-hd-4k.jpg);
+    margin-top: 100px;
+    color: white;
 }
