--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:'Roboto Condensed';
 }
 nav {
     margin-top: 50px;
@@ -20,7 +21,6 @@ nav li {
 }
 
 nav a {
-    font-family:'Roboto Condensed';
     color: white;
 }
 
@@ -41,14 +41,12 @@ header {
 }
 
 .prenom{
-    font-family:'Roboto Condensed';
     font-weight: 300;
     font-size: 100px;
     line-height: 95px;
 }
 
 .nom{
-    font-family:'Roboto Condensed';
     font-weight: 700;
     font-size: 120px;
     line-height: 95px;
@@ -57,12 +55,10 @@ header {
 .work{
     margin-top: 20px;
     margin-bottom: 5px;
-    font-family:'Roboto Condensed';
     font-weight: 400;
 }
 
 .presentation{
-    font-family:'Roboto Condensed';
     font-weight: 300;
     font-size: 15px;
     width: 50%;
@@ -90,23 +86,24 @@ header {
 #skills{
     margin-top: 50px;
     position: relative;
+    max-height: 1000px;
+    padding-top: 150px;
 }
 
 .skillsTitle{
-    font-family:'Roboto Condensed';
     text-align: center;
     font-size: 80px;
     font-weight: 300;
+    margin-top: -85px;
 }
 
 .skillsTitleBack{
-    font-family:'Roboto Condensed';
     text-align: center;
     opacity: 0.05;
     color: #5b5963;
     font-size: 150px;
     position: absolute;
-    top: -50px;
+    top: 0px;
     left: 10%;
     right: 10%;
 }
@@ -117,7 +114,6 @@ header {
 }
 
 .spanSkills{
-    font-family:'Roboto Condensed';
     margin-top: 20px;
     color: black;
 }
@@ -136,8 +132,106 @@ a{
 
 #projets{
     width: 100%;
-    height: 1000px;
+    height: 2500px;
     background: url(./images/1920x1080-95116-abstract-dark-black-minimalism-minimalist-hd-4k.jpg);
     margin-top: 100px;
     color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+#projetJs {
+    width: 80%;
+    height: 600px;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    margin-top: 80px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#projetJsTitle{
+    margin-top: 10px;
+    margin-left: 11%;
+    margin-right: 11%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.stack{
+width: 20%;
+display: flex;
+justify-content: right;
+
+}
+
+.stack p {
+    margin-right: 15px;
+}
+
+.gitHubBtn{
+    height: 40px;
+    width: fit-content;
+    background-color: white;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.btnGitHub{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.real{
+    margin-top: -15px;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.real p {
+    margin-right: 10px;
+}
+
+.real i {
+    margin-right: 15px;
+}
+
+#projetReactTitle {
+    margin-top: 10px;
+    margin-left: 11%;
+    margin-right: 11%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#projetReact{
+    width: 80%;
+    height: 600px;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    margin-top: 80px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#projetNodejs {
+    width: 80%;
+    height: 600px;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    margin-top: 80px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#projetNodeJsTitle{
+    margin-top: 10px;
+    margin-left: 11%;
+    margin-right: 11%;
+    display: flex;
+    justify-content: space-between;
 }
