--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ a{
 #projetJs {
     width: 80%;
     height: 600px;
-    background-color: #f5f5f5;
+    background: url(./images/Desktop.jpg);
+    background-size:cover;
     border-radius: 15px;
     margin-top: 80px;
     margin-left: 10%;
@@ -211,7 +212,8 @@ justify-content: right;
 #projetReact{
     width: 80%;
     height: 600px;
-    background-color: #f5f5f5;
+    background: url(./images/Capture\ d’écran\ 2023-08-11\ 010840.jpg);
+    background-size:cover;
     border-radius: 15px;
     margin-top: 80px;
     margin-left: 10%;
@@ -221,7 +223,8 @@ justify-content: right;
 #projetNodejs {
     width: 80%;
     height: 600px;
-    background-color: #f5f5f5;
+    background: url(./images/Capture\ d’écran\ 2023-08-11\ 011156.jpg);
+    background-size:cover;
     border-radius: 15px;
     margin-top: 80px;
     margin-left: 10%;
@@ -234,4 +237,84 @@ justify-content: right;
     margin-right: 11%;
     display: flex;
     justify-content: space-between;
+}
+
+#formations{
+    width: 100%;
+    height: 1000px;
+    max-height: 1000px;
+    display: flex;
+    justify-content: space-between;
+    padding: 150px;
+}
+
+#studyPng{
+    width: 800px;
+    height: 800px;
+    object-fit: contain;
+    margin-right: 150px;
+}
+
+.formation{
+    width: 500px;
+    height: 200px;
+    background-color: #f5f5f5;
+    margin-top: 80px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px 2px rgba(0,0,0,0.88);
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#formations h2 {
+    font-size: 80px;
+    font-weight: 300;
+}
+
+.formationTitle{
+    font-size: 50px;
+}
+
+.formationSubTitle{
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.diplome{
+    font-weight: 700;
+    font-size: 20px;
+}
+
+footer {
+    background-image: url(./images/1920x1080-95116-abstract-dark-black-minimalism-minimalist-hd-4k.jpg);
+    height: 700px;
+}
+
+#rs{
+    padding-top: 100px;
+    display: flex;
+    justify-content: space-evenly;
+}
+#contact{
+    padding-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#mail{
+    color: white;
+    font-size: 50px;
+    margin-left: 50px;
+}
+
+#trait{
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+    height: 2px;
+    background-color: white;
 }
