--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ header {
 
 a{
     text-decoration: none;
+    color: black;
 }
 
 #projets{
@@ -145,6 +146,7 @@ a{
     height: 600px;
     background: url(./images/Desktop.jpg);
     background-size:cover;
+    background-position: center;
     border-radius: 15px;
     margin-top: 80px;
     margin-left: 10%;
@@ -214,6 +216,7 @@ justify-content: right;
     height: 600px;
     background: url(./images/Capture\ d’écran\ 2023-08-11\ 010840.jpg);
     background-size:cover;
+    background-position: center;
     border-radius: 15px;
     margin-top: 80px;
     margin-left: 10%;
@@ -225,6 +228,7 @@ justify-content: right;
     height: 600px;
     background: url(./images/Capture\ d’écran\ 2023-08-11\ 011156.jpg);
     background-size:cover;
+    background-position: center;
     border-radius: 15px;
     margin-top: 80px;
     margin-left: 10%;
@@ -317,4 +321,41 @@ footer {
     width: 80%;
     height: 2px;
     background-color: white;
+}
+
+@media screen and (max-width: 1600px){
+    nav {
+        width: 50%;
+    }
+
+    .skillsTitleBack{
+        font-size: 100px;
+    }
+
+    .skillsTitle{
+        font-size: 55px;
+    }
+    .iconSize {
+        font-size: 80px;
+    }
+}
+
+@media screen and (max-width: 1280px){
+    .gitHubBtn p {
+        font-size: 12px;
+    }
+}
+@media screen and (max-width: 1100px){
+    .skillsTitleBack{
+        font-size: 80px;
+    }
+
+    .skillsTitle{
+        font-size: 44px;
+    }
+
+    .gitHubBtn p {
+        font-size: 10px;
+    }
+
 }
