--- a/style.css
+++ b/style.css
@@ -359,3 +359,25 @@ footer {
     }
 
 }
+
+@media screen and (max-width: 900px){
+    .gitHubBtn p {
+        display: none;
+    }
+    .gitHubBtn{
+        border-radius: 200px;
+        height: 50px;
+
+    }
+    .iconSize {
+        font-size: 55px;
+    }
+    .skillsTitleBack{
+        font-size: 60px;
+    }
+
+    .skillsTitle{
+        font-size: 40px;
+        margin-top: -120px;
+    }
+}
