--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ justify-content: right;
 }
 
 #studyPng{
-    width: 800px;
+    width: 40%;
     height: 800px;
     object-fit: contain;
     margin-right: 150px;
@@ -329,7 +329,7 @@ footer {
     }
 
     .skillsTitleBack{
-        font-size: 100px;
+        font-size: 90px;
     }
 
     .skillsTitle{
@@ -343,6 +343,21 @@ footer {
 @media screen and (max-width: 1280px){
     .gitHubBtn p {
         font-size: 12px;
+    }
+    #studyPng{
+        display: none;
+    }
+
+    #formations{
+        justify-content:space-around;
+        padding: 0;
+    }
+
+    .fTitle{
+        margin-top: 50px;
+        width: 100%;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 }
 @media screen and (max-width: 1100px){
@@ -358,6 +373,37 @@ footer {
         font-size: 10px;
     }
 
+    .iconSize {
+        font-size: 50px;
+    }
+    nav {
+        width: 70%;
+    }
+    .skillCard{
+        height: 150px;
+    }
+    #projetReact{
+        height: 500px;
+    }
+    #projetJs{
+        height: 500px;
+    }
+    #projetNodejs{
+        height: 500px;
+    }
+    #projets{
+        height: 2200px;
+    }
+    #projets h3 {
+        font-size: 16px;
+    }
+    .real p{
+    font-size: 14px;
+    }
+
+    .real i{
+        font-size: larger;
+    }
 }
 
 @media screen and (max-width: 900px){
@@ -370,7 +416,7 @@ footer {
 
     }
     .iconSize {
-        font-size: 55px;
+        font-size: 40px;
     }
     .skillsTitleBack{
         font-size: 60px;
@@ -379,5 +425,247 @@ footer {
     .skillsTitle{
         font-size: 40px;
         margin-top: -120px;
+    }
+    .skillCard{
+        height: 130px;
+        margin: 30px;
+    }
+    .divGit i{
+        margin: 5px;
+    }
+    #projetReact{
+        height: 400px;
+    }
+    #projetJs{
+        height: 400px;
+    }
+    #projetNodejs{
+        height: 400px;
+    }
+    #projets{
+        height: 1900px;
+    }
+    .formation{
+        width: 400px;
+    }
+    .fTitle{
+        margin: 0;
+        margin-top: 50px;
+        font-weight: 700;
+    }
+
+    #mail{
+        font-size: 30px;
+    }
+
+    .fa-envelope{
+        font-size: 4em;
+    }
+}
+
+@media screen and (max-width: 650px){
+nav {
+    width: 90%;
+}
+header{
+    height: 750px;
+}
+#whoAmI{
+    padding-top: 250px ;
+}
+.prenom{
+    font-size: 70px;
+}
+.nom{
+    font-size: 90px;
+    line-height: 50px;
+}
+.work{
+    font-size:larger;
+}
+.iconSize {
+    font-size: 30px;
+}
+.skillCard{
+    height: 100px;
+    padding-top: 25px;
+}
+.spanSkills {
+    font-size: smaller;
+    margin-top: 10px;
+}
+.skillsTitle{
+    font-size: 30px;
+}
+.skillsTitleBack{
+    font-size: 40px;
+}
+#skills{
+    margin-top: 20px;
+}
+#projetReact{
+    height: 280px;
+}
+#projetJs{
+    height: 280px;
+}
+#projetNodejs{
+    height: 280px;
+}
+#projets{
+    height: 1500px;
+}
+#projets h3 {
+    font-size: 14px;
+    width: 90%;
+}
+.real p{
+font-size: 12px;
+}
+
+.realIcon{
+    font-size: larger;
+}
+.gitHubBtn{
+    border-radius: 100%;
+    height: 40px;
+}
+.btnGitHub {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.formation{
+    width: 350px;
+    padding: 20px;
+    height: 150px;
+}
+.formationTitle{
+    font-size: 40px;
+}
+
+.formationSubTitle{
+    font-size: 20px;
+}
+
+#formations h2{
+    font-size: 70px;
+}
+#formations {
+    height: 800px;
+}
+#mail{
+    font-size: 20px;
+    margin-left: 25px;
+}
+
+.fa-envelope{
+    font-size: 3em;
+}
+
+footer .fa-linkedin {
+    font-size: 3em;
+}
+
+footer .fa-github{
+    font-size: 3em;
+}
+
+footer .fa-twitter{
+    font-size: 3em;
+}
+
+footer{
+    height: 500px;
+}
+}
+
+@media screen and (max-width: 450px){
+    nav {
+        font-size: 12px;
+    }
+
+    .prenom{
+        font-size: 50px;
+    }
+    .nom{
+        font-size: 65px;
+        line-height: 30px;
+    }
+
+    .presentation{
+        font-size: 14px;
+        width: 70%;
+    }
+    header{
+        height: 700px;
+    }
+    #whoAmI{
+        padding-top: 200px ;
+    }
+    .skillCard{
+    margin: 15px;
+    height: 80px;
+    }
+    .divGit i{
+        margin: 0px;
+    }
+    .skillsTitle{
+        font-size: 20px;
+    }
+    .skillsTitleBack{
+        font-size: 30px;
+    }
+    #projetReact{
+        height: 200px;
+    }
+    #projetJs{
+        height: 200px;
+    }
+    #projetNodejs{
+        height: 200px;
+    }
+    #projets{
+        height: 1200px;
+    }
+    #projets h3 {
+        font-size: 12px;
+    }
+    .real p{
+    font-size: 10px;
+    }
+    .formation{
+        width: 220px;
+        padding: 15px;
+        height: 120px;
+        margin-left: 2%;
+    }
+    .formationTitle{
+        font-size: 30px;
+    }
+    
+    .formationSubTitle{
+        font-size: 15px;
+    }
+
+    .formationYear{
+        font-size: 13px;
+    }
+    
+    #formations h2{
+        font-size: 40px;
+        margin-left: 2%;
+        margin-right: 2%;
+        text-align: center;
+    }
+    #formations {
+        height: 650px;
+    }
+
+    .diplome{
+        font-size: 15px;
+    }
+
+    .fa-envelope{
+        font-size: 2em;
     }
 }
