--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ footer {
         font-size: 55px;
     }
     .iconSize {
-        font-size: 80px;
+        font-size: 6em;
     }
 }
 
@@ -374,7 +374,7 @@ footer {
     }
 
     .iconSize {
-        font-size: 50px;
+        font-size: 4em;
     }
     nav {
         width: 70%;
@@ -416,7 +416,7 @@ footer {
 
     }
     .iconSize {
-        font-size: 40px;
+        font-size: 3em;
     }
     .skillsTitleBack{
         font-size: 60px;
@@ -484,7 +484,7 @@ header{
     font-size:larger;
 }
 .iconSize {
-    font-size: 30px;
+    font-size: 2em;
 }
 .skillCard{
     height: 100px;
