--- a/style.css
+++ b/style.css
@@ -338,6 +338,9 @@ footer {
     .iconSize {
         font-size: 6em;
     }
+    .fa-7x{
+        font-size: 6em;
+    }
 }
 
 @media screen and (max-width: 1280px){
@@ -374,6 +377,9 @@ footer {
     }
 
     .iconSize {
+        font-size: 4em;
+    }
+    .fa-7x{
         font-size: 4em;
     }
     nav {
@@ -416,6 +422,9 @@ footer {
 
     }
     .iconSize {
+        font-size: 3em;
+    }
+    .fa-7x{
         font-size: 3em;
     }
     .skillsTitleBack{
@@ -484,6 +493,9 @@ header{
     font-size:larger;
 }
 .iconSize {
+    font-size: 2em;
+}
+.fa-7x{
     font-size: 2em;
 }
 .skillCard{
