--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ footer {
         font-size: 30px;
     }
 
-    .fa-envelope{
+    .fa-5x{
         font-size: 4em;
     }
 }
@@ -574,7 +574,7 @@ font-size: 12px;
     margin-left: 25px;
 }
 
-.fa-envelope{
+.fa-5x{
     font-size: 3em;
 }
 
@@ -681,7 +681,7 @@ footer{
         font-size: 15px;
     }
 
-    .fa-envelope{
+    .fa-5x{
         font-size: 2em;
     }
 }
